Task overflow fixed.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -216,6 +216,7 @@ host-is-mon {
 
     .content {
         height: 250px;
+        overflow-y:auto;
     }
 
     .task-item {
